* Drop libxfce4util as dependency * Switch to accessories-text-editor as icon name
(Old svn revision: 26571)

--- a/Mousepad.desktop.in.in
+++ b/Mousepad.desktop.in.in
@@ -5,7 +5,7 @@ _Name=Mousepad
 _Comment=Simple Text Editor
 _GenericName=Text Editor
 Exec=mousepad %F
-Icon=mousepad
+Icon=accessories-text-editor
 Terminal=false
 StartupNotify=true
 Type=Application
