--- a/icons/scalable/Makefile.am
+++ b/icons/scalable/Makefile.am
@@ -4,6 +4,11 @@ iconsdir = $(datadir)/icons/hicolor/scalable/apps
 icons_DATA =								\
 	Mousepad.svg
 
+# install symlink
+install-data-local:
+	$(mkinstalldirs) $(DESTDIR)$(iconsdir)
+	-( cd $(DESTDIR)$(iconsdir) ; ln -sf Mousepad.svg accessories-text-editor.svg )
+
 EXTRA_DIST =								\
 	$(icons_DATA)
 
