--- a/configure.in.in
+++ b/configure.in.in
@@ -1,5 +1,3 @@
-dnl $Id$
-
 dnl ***************************
 dnl *** Version information ***
 dnl ***************************
@@ -24,7 +22,7 @@ AC_COPYRIGHT([Copyright (c) 2007-2008
 AC_INIT([Mousepad], [mousepad_version], [http://bugzilla.xfce.org/], [mousepad])
 AC_PREREQ([2.50])
 AC_CANONICAL_TARGET()
-AC_REVISION([$Id$])
+AC_REVISION([])
 
 dnl ***************************
 dnl *** Initialize automake ***
