--- a/docs/manual/C/Mousepad.xml.in
+++ b/docs/manual/C/Mousepad.xml.in
@@ -51,17 +51,18 @@
       <title>Introduction</title>
 
       <para>
-        &application; is the default text editor for the Xfce Desktop Environment. It has been design to be a
-        lightweight editor you would use for basic file editing. Therefore &application; starts quickly, but
-        also has features like editing multiple documents, vertical selection, type-ahead search, full tab
-        drag and drop and much more.
+        &application; is the default text editor for the Xfce Desktop Environment. It has
+        been design to be a lightweight editor you would use for basic file editing.
+        Therefore &application; starts quickly, but also has features like editing
+        multiple documents, vertical selection, type-ahead search, full tab drag and drop
+        and much more.
       </para>
 
       <para>
-        &application; started as a fork of Leafpad to provide printing support using Xfprint, but as of version
-        0.3 is has been completely rewritten to add support for tabs and DBus. Although the rewrite added
-        a lot of new features, it is still as fast as the Leafpad based fork and therefore fits perfectly
-        in the Xfce philosophy.
+        &application; started as a fork of Leafpad to provide printing support using
+        Xfprint, but as of version 0.3 is has been completely rewritten to add support for
+        tabs and DBus. Although the rewrite added a lot of new features, it is still as
+        fast as the Leafpad based fork and therefore fits perfectly in the Xfce philosophy.
       </para>
     </sect2>
 
@@ -69,8 +70,8 @@
       <title>Terminology</title>
 
       <para>
-        There might be a couple of words in this manual that could be the source of misunderstanding. The table
-        below will clarify those words.
+        There might be a couple of words in this manual that could be the source of
+        misunderstanding. The table below will clarify those words.
       </para>
 
       <table frame="all">
@@ -101,83 +102,181 @@
     </sect2>
   </sect1>
 
-  <sect1 id="mousepad">
-    <title>Working With &application;</title>
-
-    <sect2 id="window">
-      <title>Main Window</title>
-
-      <sect3 id="menu-bar">
-        <title>Menu Bar</title>
-      </sect3>
-
-      <sect3 id="statusbar">
-        <title>Statsbar</title>
-      </sect3>
-    </sect2>
-
-    <sect2 id="navigation">
-      <title>Navigation</title>
-
-      <sect3 id="go-to-line">
-        <title>Go To Line</title>
-      </sect3>
-    </sect2>
-
-    <sect2 id="ordering-documents">
-      <title>Ordering Documents</title>
-    </sect2>
-
-    <sect2 id="documents">
-      <title>Documents</title>
-
-      <sect3 id="new-documents">
-        <title>Creating New Documents</title>
-      </sect3>
-
-      <sect3 id="opening-documents">
-        <title>Opening Documents</title>
-      </sect3>
-
-      <sect3 id="recent-documents">
-        <title>Recent Documents</title>
-      </sect3>
-    </sect2>
-  </sect1>
-
-  <sect1 id="text">
+  <sect1 id="working-with-text">
     <title>Working With Text</title>
 
     <sect2 id="keyboard-shortcuts">
       <title>Keyboard Shortcuts</title>
     </sect2>
 
+    <sect2 id="undo-and-redo">
+      <title>Undo and Redo</title>
+
+      <para>
+
+      </para>
+    </sect2>
+
+    <sect2 id="copy-and-paste">
+      <title>Copy and Paste</title>
+
+      <para>
+        &application; supports both the selection and primary clipboard. To paste
+        something from the seletion clipboard you can click with the middle mouse
+        button in the &application; window.
+      </para>
+
+      <para>
+        The primary clipboard can be accessed by the <guimenuitem>Cut</guimenuitem>,
+        <guimenuitem>Copy</guimenuitem> and <guimenuitem>Paste</guimenuitem> menu
+        items in the <guimenu>Edit</guimenu> menu. The keyboard shortcuts mentioned
+        above also work.
+      </para>
+
+      <sect3 id="paste-from-history">
+        <title>Paste from History</title>
+
+        <screenshot>
+          <mediaobject>
+            <imageobject>
+              <imagedata fileref="images/paste-from-history.png" format="PNG"/>
+            </imageobject>
+
+            <textobject>
+              <phrase>Paste from History</phrase>
+            </textobject>
+
+            <caption>
+              <para>Screenshot of the history menu</para>
+            </caption>
+          </mediaobject>
+        </screenshot>
+
+        <para>
+          Each time you copy text in &application;, the text is pushed onto a stack.
+          When you choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste Special
+          </guimenuitem><guimenuitem>Paste from History</guimenuitem></menuchoice> a
+          menu will appear below the carret with the last 10 clipboard items.
+        </para>
+
+        <para>
+          You can choose an item from the list by clicking it, using the arrow keys
+          and press enter or by pressing the numeric keyboard accelerator.
+        </para>
+      </sect3>
+
+      <sect3 id="paste-as-column">
+        <title>Paste as Column</title>
+
+        <para>
+          When the content in the primary clipboard contains multiple lines, you can paste
+          the content in the same column. &application; will then try  to paste each line
+          in the clipboard at the same x-coordinate. You can access this option by
+          choosing <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste Special
+          </guimenuitem><guimenuitem>Paste as Column</guimenuitem></menuchoice>.
+        </para>
+      </sect3>
+    </sect2>
+
     <sect2 id="auto-indent">
       <title>Auto Indent</title>
+
     </sect2>
 
     <sect2 id="selections">
       <title>Selecting Text</title>
 
       <sect3 id="multi-and-column-selections">
-        <title>Multi- And Column-Selections</title>
+        <title>Column-Selections</title>
       </sect3>
 
       <sect3 id="indentation">
         <title>Indentation</title>
       </sect3>
-    </sect2>
 
-    <sect2 id="clipboard">
-      <title>Copy, Cut and Paste From The Clipboard</title>
+      <sect3 id="moving-selections">
+        <title>Moving Selections</title>
+      </sect3>
     </sect2>
 
     <sect2 id="search-and-replace">
       <title>Search And Replace</title>
+
+      <sect3 id="typeahead-search">
+        <title>Typeahead Search</title>
+
+        <screenshot>
+          <mediaobject>
+            <imageobject>
+              <imagedata fileref="images/typeahead-search.png" format="PNG"/>
+            </imageobject>
+
+            <textobject>
+              <phrase>Typeahead search bar</phrase>
+            </textobject>
+
+            <caption>
+              <para>Screenshot of the typeahead search bar</para>
+            </caption>
+          </mediaobject>
+        </screenshot>
+      </sect3>
+
+      <sect3 id="replace-dialog">
+        <title>Search and Replace Dialog</title>
+
+        <screenshot>
+          <mediaobject>
+            <imageobject>
+              <imagedata fileref="images/find-and-replace.png" format="PNG"/>
+            </imageobject>
+
+            <textobject>
+              <phrase>Find and Replace Dialog</phrase>
+            </textobject>
+
+            <caption>
+              <para>Screenshot of the find and replace dialog</para>
+            </caption>
+          </mediaobject>
+        </screenshot>
+      </sect3>
     </sect2>
 
     <sect2 id="tabs">
       <title>Tabs</title>
+
+        <screenshot>
+          <mediaobject>
+            <imageobject>
+              <imagedata fileref="images/tab-size-menu.png" format="PNG"/>
+            </imageobject>
+
+            <textobject>
+              <phrase>Tab Size menu</phrase>
+            </textobject>
+
+            <caption>
+              <para>Screenshot of the tabs size menu</para>
+            </caption>
+          </mediaobject>
+        </screenshot>
+
+        <screenshot>
+          <mediaobject>
+            <imageobject>
+              <imagedata fileref="images/other-tab-size.png" format="PNG"/>
+            </imageobject>
+
+            <textobject>
+              <phrase>Other tab size</phrase>
+            </textobject>
+
+            <caption>
+              <para>Screenshot of the other tab size dialog</para>
+            </caption>
+          </mediaobject>
+        </screenshot>
 
       <sect3 id="insert-spaces">
         <title>Insert Spaces</title>
