--- a/docs/manual/C/images/Makefile.am
+++ b/docs/manual/C/images/Makefile.am
@@ -1,7 +1,13 @@
-# $Id$
-
 imagesdir = $(datadir)/doc/Mousepad/html/C/images
-images_DATA =
+images_DATA =								\
+	find-and-replace.png						\
+	go-to.png							\
+	main-window.png							\
+	Makefile.am							\
+	other-tab-size.png						\
+	paste-from-history.png						\
+	tab-size-menu.png						\
+	typeahead-search.png
 
 EXTRA_DIST = 								\
 	$(images_DATA)
