--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -7,6 +7,7 @@ mousepad/mousepad-dbus.c
 mousepad/mousepad-dialogs.c
 mousepad/mousepad-document.c
 mousepad/mousepad-encoding-dialog.c
+mousepad/mousepad-encoding.c
 mousepad/mousepad-file.c
 mousepad/mousepad-preferences.c
 mousepad/mousepad-print.c
