Make build GIT friendly.
Also apply silent rules and use new XDT macros.

--- a/Makefile.am
+++ b/Makefile.am
@@ -30,6 +30,15 @@ desktop_in_files = $(desktop_in_in_files:.desktop.in.in=.desktop.in)
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
 
+.PHONY: ChangeLog
+
+ChangeLog: Makefile
+	(GIT_DIR=$(top_srcdir)/.git git log > .changelog.tmp			\
+	&& mv .changelog.tmp ChangeLog; rm -f .changelog.tmp)			\
+	|| (touch ChangeLog; echo 'Git directory not found: installing possibly empty changelog.' >&2)
+
+dist-hook: ChangeLog
+
 EXTRA_DIST =									\
 	MousepadHelp.in								\
 	Mousepad.spec.in							\
