Add GtkSourceView dependency to build system.
Still need to determine which version of GtkSourceView to depend on.

--- a/mousepad/Makefile.am
+++ b/mousepad/Makefile.am
@@ -58,6 +58,7 @@ mousepad_CFLAGS = \
 	$(GLIB_CFLAGS) \
 	$(GTK_CFLAGS) \
 	$(GTHREAD_CFLAGS) \
+	$(GTKSOURCEVIEW_CFLAGS) \
 	$(PLATFORM_CFLAGS)
 
 mousepad_LDFLAGS = \
@@ -67,7 +68,8 @@ mousepad_LDFLAGS = \
 mousepad_LDADD = \
 	$(GLIB_LIBS) \
 	$(GTK_LIBS)	\
-	$(GTHREAD_LIBS)
+	$(GTHREAD_LIBS) \
+	$(GTKSOURCEVIEW_LIBS)
 
 if HAVE_DBUS
 mousepad_built_sources +=	\
