--- a/configure.ac.in
+++ b/configure.ac.in
@@ -83,6 +83,7 @@ dnl ***********************************
 XDT_CHECK_PACKAGE([GLIB], [glib-2.0], [2.12.0])
 XDT_CHECK_PACKAGE([GTHREAD], [gthread-2.0], [2.12.0])
 XDT_CHECK_PACKAGE([GTK], [gtk+-2.0], [2.10.0])
+XDT_CHECK_PACKAGE([GTKSOURCEVIEW], [gtksourceview-2.0])
 
 dnl **********************************
 dnl *** Optional support for D-BUS ***
