--- a/configure.ac.in
+++ b/configure.ac.in
@@ -27,7 +27,7 @@ AC_REVISION([])
 dnl ***************************
 dnl *** Initialize automake ***
 dnl ***************************
-AM_INIT_AUTOMAKE([1.8 dist-bzip2 tar-ustar])
+AM_INIT_AUTOMAKE([1.8 no-dist-gzip dist-bzip2 tar-ustar])
 AM_CONFIG_HEADER([config.h])
 AM_MAINTAINER_MODE()
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
@@ -52,7 +52,8 @@ AC_CHECK_PROGS([PERL], [perl5 perl])
 dnl **************************
 dnl *** Initialize libtool ***
 dnl **************************
-AC_PROG_LIBTOOL()
+LT_PREREQ([2.2.6])
+LT_INIT([disable-static])
 
 dnl **************************************
 dnl *** Substitute version information ***
