Use DConf (or whatever the default) when DBus support is enabled
Instead of explicitly using keyfile backend

--- a/mousepad/Makefile.am
+++ b/mousepad/Makefile.am
@@ -80,7 +80,8 @@ mousepad_dbus_sources = \
 
 mousepad_CFLAGS += \
 	-DDBUS_API_SUBJECT_TO_CHANGE \
-	$(DBUS_CFLAGS)
+	$(DBUS_CFLAGS) \
+	-DMOUSEPAD_GSETTINGS_USE_DBUS=1
 
 mousepad_LDADD +=	\
 	$(DBUS_LIBS)
