--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ mousepad/mousepad
 mousepad/mousepad-dbus-infos.h
 mousepad/mousepad-marshal.c
 mousepad/mousepad-marshal.h
+/mousepad/mousepad-prefs-dialog-ui.h
 /mousepad/mousepad-settings.gschema.valid
 mousepad/mousepad-window-ui.h
 po/.intltool-merge-cache
