Re-factor languages code into two new files
Add a GtkActionGroup subclass that knows about languages and a GtkAction
subclass that can have a related language. This way all the actions are
in the same action group and will be useful for moving the colour
scheme code out of mousepad-window.c in the future.

--- a/mousepad/Makefile.am
+++ b/mousepad/Makefile.am
@@ -21,6 +21,8 @@ mousepad_SOURCES = \
 	$(mousepad_built_sources) \
 	$(mousepad_dbus_sources) \
 	main.c \
+	mousepad-action-group.c \
+	mousepad-action-group.h \
 	mousepad-application.c \
 	mousepad-application.h \
 	mousepad-dialogs.c \
@@ -33,8 +35,8 @@ mousepad_SOURCES = \
 	mousepad-encoding-dialog.h \
 	mousepad-file.c \
 	mousepad-file.h \
-	mousepad-languages.c \
-	mousepad-languages.h \
+	mousepad-language-action.c \
+	mousepad-language-action.h \
 	mousepad-prefs-dialog.c \
 	mousepad-prefs-dialog.h \
 	mousepad-prefs-dialog-ui.h \
