Move colour scheme code out of mousepad-window.c
Treated like the languages code, there's a GtkAction subclass for
style scheme actions and the MousepadActionGroup knows about them.

--- a/mousepad/Makefile.am
+++ b/mousepad/Makefile.am
@@ -53,6 +53,8 @@ mousepad_SOURCES = \
 	mousepad-settings-store.h \
 	mousepad-statusbar.c \
 	mousepad-statusbar.h \
+	mousepad-style-scheme-action.c \
+	mousepad-style-scheme-action.h \
 	mousepad-view.c \
 	mousepad-view.h \
 	mousepad-util.c \
