--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -2,6 +2,7 @@
 # Sources
 #
 mousepad/main.c
+mousepad/mousepad-action-group.c
 mousepad/mousepad-application.c
 mousepad/mousepad-dbus.c
 mousepad/mousepad-dialogs.c
@@ -9,6 +10,7 @@ mousepad/mousepad-document.c
 mousepad/mousepad-encoding-dialog.c
 mousepad/mousepad-encoding.c
 mousepad/mousepad-file.c
+mousepad/mousepad-language-action.c
 mousepad/mousepad-prefs-dialog.c
 mousepad/mousepad-prefs-dialog.glade
 mousepad/mousepad-print.c
@@ -17,6 +19,7 @@ mousepad/mousepad-search-bar.c
 mousepad/mousepad-settings.c
 mousepad/mousepad-settings-store.c
 mousepad/mousepad-statusbar.c
+mousepad/mousepad-style-scheme-action.c
 mousepad/mousepad-util.c
 mousepad/mousepad-view.c
 mousepad/mousepad-window.c
