Fix the little notebook tab close button
For GTK3 it's basically copied from GeditCloseButton, for GTK2
it's inspired by Geany's notebook.c.

--- a/mousepad/Makefile.am
+++ b/mousepad/Makefile.am
@@ -25,6 +25,8 @@ mousepad_SOURCES = \
 	mousepad-action-group.h \
 	mousepad-application.c \
 	mousepad-application.h \
+	mousepad-close-button.c \
+	mousepad-close-button.h \
 	mousepad-dialogs.c \
 	mousepad-dialogs.h \
 	mousepad-document.c \
